History of jquery.pyproxy
=========================

0.2 (unreleased)
----------------

- Nothing changed yet.


0.1 (2010-04-19)
----------------

- bugfix in base: package_contents did not work with python
  2.4. [vincent]

- renamed jquerypyproxy in jquery.pyproxy [vincent]

- bugfix in base: the grammar was not passed to the objects
  created. [vincent] 

- bugfix in base: str.endswith(tuple) only works in python 2.5+, added
  a custom endswith. [vincent]

- bugfix in plone.py: typo in the class name. [vincent]

- added append in grammar. [vincent]

- added basic javascript calls. [vincent]

- added JQueryProxy Python class and decorators for plone and
  Django. [vincent]

- added log file + python egg. [vincent]
